# RemiSave

./: .gitignore  Cargo.toml  FRONTEND_SETUP.md  Makefile  QUICK_REFERENCE.md  README.md  WIRING_SUMMARY.md
.github/workflows/: ci.yml
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
contracts/token/test_snapshots/test/: test.1.json  test_burn.1.json  test_zero_allowance.1.json  transfer_from_insufficient_allowance.1.json  transfer_insufficient_balance.1.json
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs
remisave-frontend/: INTEGRATION.md  fix-ts.js  next-dev-log.txt  next-dev-log2.txt  package-lock.json  package.json  pnpm-lock.yaml  scratch-balance.ts  scratch.ts  scratch2.ts  scratch3.ts  tsconfig.tsbuildinfo
remisave-frontend/app/: layout.tsx  page.tsx
remisave-frontend/app/api/faucet/: route.ts
remisave-frontend/app/components/: dashboard-header.tsx  deposit-form.tsx  user-position.tsx  vault-stats.tsx
remisave-frontend/app/contexts/: vault-context.tsx  wallet-context.tsx
remisave-frontend/app/dashboard/: page.tsx
remisave-frontend/hooks/: use-vault-operations.ts
remisave-frontend/lib/: config.ts  contract-wrapper.ts  stellar-rpc.ts  utils.ts
