[workspace]
resolver = "2"
members = [
  "contracts/token",
  "contracts/vault",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }

[workspace.dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true